tests/codegen/fail/unsupported_async_for_await_dylib_build.stderr
error: tests/codegen/fail/unsupported_async_for_await_dylib_build.ql:10:5: LLVM IR backend foundation does not support `for await` lowering yet
      for await value in (1, 2, 3) {
      ^^^^^^^^
